Revert "Merge branch 'zyzyx-fix-sidebar-collapse' into 'dev'"
This reverts merge request !249

--- a/less/actor-sheet.less
+++ b/less/actor-sheet.less
@@ -349,40 +349,8 @@
     clip-path       : polygon(22px 0, 100% 0%, 100% 100%, 0% 100%);
 }
 
-.cpr-tabs {
-    display: flex;
-    flex-direction: row;
+.tabs {
     flex-wrap: nowrap;
-    justify-content: flex-start;
-}
-
-.cpr-tabs > * {
-    flex: 1;
-}
-
-.cpr-tabs > .flex0 {
-    display: block;
-    flex: 0;
-}
-
-.cpr-tabs > .flex1 {
-   flex: 1;
-}
-
-.cpr-tabs > .flex2 {
-    flex: 2;
-}
-
-.cpr-tabs > .flex3 {
-    flex: 3;
-}
-
-.cpr-tabs .item {
-    text-align: center;
-}
-
-.cpr-tabs .item.active {
-    text-shadow: 0 0 10px red;
 }
 
 .collapse-icon,
